--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body {
 
 header .full-width {
   height: 800px;
-  background-image: url(../img/full-background.png);
+  background-image: url(full-background.png);
   background-size: cover;
   background-position: center;
 }
